update counter functionality

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <nav>
                 <div class="main-heading"><a href="#">Cart Update</a></div>
                 <div class="cart" id="cartContainer">
-                    <i class="fa-solid fa-cart-shopping"></i>
+                    <i class="fa-solid fa-cart-shopping"><span id="countUpdate"></span></i>
                 </div>
             </nav>
          </header>
@@ -33,7 +33,7 @@
                     </div>
                 </div>
             </div>
-            <div class="cardContainer">
+            <!-- <div class="cardContainer">
                 <div class="image">
                     <img src="https://www.wahlpro.com/media/catalog/product/b/a/baldingclipper-hero-3000x3000-min.jpg?optimize=medium&fit=bounds&height=700&width=700&canvas=700:700" alt="">
                 </div>
@@ -74,7 +74,7 @@
                         <button class="cartBtn btn" id="cartUpdateBtn"><i class="fa-solid fa-cart-shopping"></i></button>
                     </div>
                 </div>
-            </div>
+            </div> -->
          </main>
          
     </div>
