--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                 
             </nav>
          </header>
+         <!-- input search items -->
+         <div class="searchBox">
+            <input type="text" placeholder="Search...">
+        </div>
          <!-- main -->
          <main>
             <div class="cardContainer" data-product-name="product1">
@@ -42,10 +46,10 @@
             </div>
             <div class="cardContainer" data-product-name="product2">
                 <div class="image">
-                    <img src="https://www.wahlpro.com/media/catalog/product/b/a/baldingclipper-hero-3000x3000-min.jpg?optimize=medium&fit=bounds&height=700&width=700&canvas=700:700" alt="">
+                    <img src="https://images.pexels.com/photos/90946/pexels-photo-90946.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
                 </div>
                 <div class="decription">
-                    <p class="productName">The best clipper</p>
+                    <p class="productName">Canon Camera</p>
                     <p class="price"><span style="color: red; font-size: 23px;">2000</span> <span style="font-size: 13px;">PKR</span></p>
 
                     <div class="btns">
@@ -56,10 +60,10 @@
             </div>
             <div class="cardContainer" data-product-name="product3">
                 <div class="image">
-                    <img src="https://www.wahlpro.com/media/catalog/product/b/a/baldingclipper-hero-3000x3000-min.jpg?optimize=medium&fit=bounds&height=700&width=700&canvas=700:700" alt="">
+                    <img src="https://images.pexels.com/photos/258244/pexels-photo-258244.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
                 </div>
                 <div class="decription">
-                    <p class="productName">The best clipper</p>
+                    <p class="productName">Perfume</p>
                     <p class="price"><span style="color: red; font-size: 23px;">2000</span> <span style="font-size: 13px;">PKR</span></p>
 
                     <div class="btns">
@@ -70,10 +74,10 @@
             </div>
             <div class="cardContainer" data-product-name="product4">
                 <div class="image">
-                    <img src="https://www.wahlpro.com/media/catalog/product/b/a/baldingclipper-hero-3000x3000-min.jpg?optimize=medium&fit=bounds&height=700&width=700&canvas=700:700" alt="">
+                    <img src="https://images.pexels.com/photos/3907507/pexels-photo-3907507.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
                 </div>
                 <div class="decription">
-                    <p class="productName">The best clipper</p>
+                    <p class="productName">Nikon Camera</p>
                     <p class="price"><span style="color: red; font-size: 23px;">2000</span> <span style="font-size: 13px;">PKR</span></p>
 
                     <div class="btns">
