title change and cart number functionality added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cart Counter</title>
+    <title>E-Store</title>
     <link rel="stylesheet" href="app.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -13,7 +13,7 @@
         <!-- header -->
          <header>
             <nav>
-                <div class="main-heading"><a href="#">Cart Update</a></div>
+                <div class="main-heading"><a href="#">E-Store</a></div>
                 <div class="cart" id="cartContainer">
                     <i class="fa-solid fa-cart-shopping" id="dropDownBtn"><span id="countUpdate"></span></i>
                     <div class="dropDown " id="dropDownList">
@@ -87,7 +87,11 @@
                 </div>
             </div>
          </main>
-         
+         <div class="productModalDiv">
+            <div class="productModal">
+                
+            </div>
+         </div>
     </div>
     <script src="app.js"></script>
 </body>
