search functionality added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
          </header>
          <!-- input search items -->
          <div class="searchBox">
-            <input type="text" placeholder="Search..." id="searchFilter">
+            <input type="text" placeholder="Search..." id="searchFilter" onkeyup="searchFilterData()">
         </div>
          <!-- main -->
          <main id="mainDiv">
